--- a/argocd/monitor-stack2/values.yaml
+++ b/argocd/monitor-stack2/values.yaml
@@ -1,15 +1,34 @@
-prometheus:
-  prometheusSpec:
-    serviceMonitorNamespaceSelector:
-      matchNames:
-        - monitor
-    serviceMonitorSelector: {}
-    serviceMonitorSelectorNilUsesHelmValues: false
-  service:
-    type: ClusterIP
-  server:
-    persistentVolume:
-      enabled: false  # Disable PV for simplicity
+prometheus-operator:
+  enabled: true
+  prometheus:
+    enabled: true
+    service:
+      type: ClusterIP
+    prometheusSpec:
+      serviceMonitorNamespaceSelector:
+        matchNames:
+          - monitor
+      serviceMonitorSelector: {}
+  alertmanager:
+    enabled: false  # Disable Alertmanager
+  grafana:
+    enabled: false  # Disable Grafana
+  kubeControllerManager:
+    enabled: false  # Disable Kubernetes Controller Manager monitoring
+  kubeScheduler:
+    enabled: false  # Disable Kubernetes Scheduler monitoring
+  kubeEtcd:
+    enabled: false  # Disable etcd monitoring
+  kubeStateMetrics:
+    enabled: false  # Disable Kube State Metrics
+  nodeExporter:
+    enabled: false  # Disable Node Exporter
+  coreDns:
+    enabled: false  # Disable CoreDNS monitoring
+  kubeApiServer:
+    enabled: false  # Disable Kubernetes API server monitoring
+  kubelet:
+    enabled: false  # Disable Kubelet monitoring
 
 grafana:
   grafana.ini:
