--- a/argocd/monitor-stack2/Chart.yaml
+++ b/argocd/monitor-stack2/Chart.yaml
@@ -5,8 +5,8 @@ type: application
 version: 0.1.0
 
 dependencies:
-  - name: prometheus-operator
-    version: 9.3.1
+  - name: kube-prometheus-stack
+    version: 58.0.0
     repository: https://prometheus-community.github.io/helm-charts
   - name: grafana
     version: 7.3.6
