--- a/argocd/monitor-stack2/values.yaml
+++ b/argocd/monitor-stack2/values.yaml
@@ -1,15 +1,29 @@
 prometheus:
-  prometheusSpec:
-    serviceMonitorNamespaceSelector:
-      matchNames:
-        - monitor
-    serviceMonitorSelector: {}
-    serviceMonitorSelectorNilUsesHelmValues: false
   service:
     type: ClusterIP
   server:
     persistentVolume:
       enabled: false  # Disable PV for simplicity
+    extraScrapeConfigs:
+      - job_name: 'flask-app'
+        kubernetes_sd_configs:
+          - role: endpoints
+            namespaces:
+              names:
+                - default  # The namespace where your Flask app is deployed
+        relabel_configs:
+          - source_labels: [__meta_kubernetes_service_label_app]
+            action: keep
+            regex: flask-app  # Match the label of your Flask app service
+          - source_labels: [__meta_kubernetes_service_name]
+            action: keep
+            regex: flask-app-service  # Match the name of your Flask app service
+          - source_labels: [__meta_kubernetes_endpoint_port_name]
+            action: keep
+            regex: http  # Match the port name of your Flask app service
+        metrics_path: /metrics  # The Flask metrics endpoint
+        scheme: http  # Use http (or https if your app uses TLS)
+        scrape_interval: 15s  # Scrape every 15 seconds (adjust as needed)
 
 
 grafana:
@@ -26,7 +40,7 @@ grafana:
       datasources:
         - name: Prometheus
           type: prometheus
-          url: http://monitor-stack-kube-prometheus-prometheus.monitor.svc.cluster.local:9090  # Update if needed
+          url: http://monitor-stack-prometheus-server.monitor.svc.cluster.local  # Update if needed
           access: proxy
           isDefault: true
         - name: loki-auto
