--- a/argocd/monitor-stack2/values.yaml
+++ b/argocd/monitor-stack2/values.yaml
@@ -4,34 +4,24 @@ prometheus:
   server:
     persistentVolume:
       enabled: false  # Disable PV for simplicity
-    extraScrapeConfigs:
-      - job_name: 'flask-app'
-        kubernetes_sd_configs:
-          - role: endpoints
-            namespaces:
-              names:
-                - default  # The namespace where your Flask app is deployed
-        relabel_configs:
-          - source_labels: [__meta_kubernetes_service_label_app]
-            action: keep
-            regex: flask-app  # Match the label of your Flask app service
-          - source_labels: [__meta_kubernetes_endpoint_port_name]
-            action: keep
-            regex: http  # Match the port name of your Flask app service
-        metrics_path: /metrics  # The Flask metrics endpoint
-        scheme: http  # Use http (or https if your app uses TLS)
-        scrape_interval: 15s  # Scrape every 15 seconds (adjust as needed)
-  
-      # Ensure the default Prometheus jobs are included
-      - job_name: prometheus
-        static_configs:
-          - targets:
-              - localhost:9090
-        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-
-      - job_name: kubernetes-apiservers
-        kubernetes_sd_configs:
-          - role: endpoints
+    serverFiles:
+      prometheus.yml:
+        scrape_configs:
+          - job_name: 'flask-app'
+            kubernetes_sd_configs:
+              - role: endpoints
+                namespaces:
+                  names:
+                    - default
+            relabel_configs:
+              - source_labels: [__meta_kubernetes_service_label_app]
+                action: keep
+                regex: flask-app
+              - source_labels: [__meta_kubernetes_endpoint_port_name]
+                action: keep
+                regex: http
+            metrics_path: /metrics
+            scheme: http
 
 
 grafana:
