--- a/argocd/monitor-stack2/values.yaml
+++ b/argocd/monitor-stack2/values.yaml
@@ -37,7 +37,7 @@ grafana:
       datasources:
         - name: Prometheus
           type: prometheus
-          id: prometheus
+          uid: prometheus
           url: http://monitor-stack-prometheus-server.monitor.svc.cluster.local  # Update if needed
           access: proxy
           isDefault: true
