app of apps - needs to add ci cd

--- a/argocd/applications/monitor.yaml
+++ b/argocd/applications/monitor.yaml
@@ -13,4 +13,4 @@ spec:
     server: https://kubernetes.default.svc
     namespace: monitor  # Ensure Prometheus and Grafana are in the same namespace
   syncPolicy:
-    automated: null
+    automated: null # prune true in ui must be true - manually check.
