--- a/argocd/monitor-stack-argo/values.yaml
+++ b/argocd/monitor-stack-argo/values.yaml
@@ -1,5 +1,5 @@
 prometheus:
-  extraScrapeConfigs: |
+  extraScrapeConfigs: | # took hours, found from official artifact hub default values, with |
     - job_name: 'flask-app'
       kubernetes_sd_configs:
         - role: endpoints
