--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -388,11 +388,12 @@ jobs:
                   echo "ArgoCD is already installed in the argocd namespace."
                 else
                   echo "ArgoCD is not installed. Proceeding with installation."
-                  helm install argocd argo/argo-cd -n argocd \
-                    --set argo-cd.configs.secret.argocdServerAdminPassword="admin"
+                  helm install argocd argo/argo-cd -n argocd
+                  kubectl get secret argocd-initial-admin-secret -n argocd \
+                   -o jsonpath="{.data.password}" | base64 -d
                 fi
 
-      - name: install apps # app of apps - to continue now
+      - name: Install Apps # app of apps
         run: |
           cd argocd
-          kubectl apply -f argocd-apps/
+          kubectl apply -f argocd/app-of-apps.yaml
