added cleanup cluster dpeloyments yaml

--- a/.github/workflows/cleanups.yaml
+++ b/.github/workflows/cleanups.yaml
@@ -1,7 +1,7 @@
 name: cleanups
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # should add automatically in the future...
 
 env:
     DOCKERTOKEN: ${{ secrets.DOCKERTOKEN }}
