--- a/.github/workflows/cleanups.yaml
+++ b/.github/workflows/cleanups.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3 # bash <script>
 
       - name: cleaning up docker hub older tags
         run: |
