--- a/argocd/applications/monitor.yaml
+++ b/argocd/applications/monitor.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/OmriFialkov/flask-catexer-app-actions
+    repoURL: https://github.com/OmriFialkov/ArgoCD-Charts
     targetRevision: main
-    path: argocd/monitor-stack-argo  # Path to the umbrella chart
+    path: monitor-stack-argo  # Path to the umbrella chart
   destination:
     server: https://kubernetes.default.svc
     namespace: monitor  # Ensure Prometheus and Grafana are in the same namespace
