--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -449,6 +449,9 @@ jobs:
             cd argocd/helm-flask
             sed -i "s/version: .*/version: 0.0.${{ github.run_number }}/g" ./Chart.yaml
             echo "# this file was modified by a ci to update helm version tagging" >> ./Chart.yaml
+          else
+            echo "no need to update helm-flask chart version, app dir & flask chart not changed.."
+          fi
 
       - name: install rsync #######
         run: |
