--- a/argocd/helm-flask/values.yaml
+++ b/argocd/helm-flask/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 5
 
 flaskApp:
   image: crazyguy888/catexer-actions
-  tag: 0.0.18
+  tag: latest
   port: 5000
   flaskEnv: development
   mysqlHost: mysql-service
