--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -338,9 +338,9 @@ name: ci cd with helm
 on:
   push:
     paths: ########
-      # - 'argocd/helm-flask/**'
-      # - 'argocd/log/**'
-      # - 'argocd/monitor-stack-argo/**'
+      - 'argocd/helm-flask/**'
+      - 'argocd/log/**'
+      - 'argocd/monitor-stack-argo/**'
       - 'app/**'
     branches:
       - main
