--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.8
 # set a directory for the app
 WORKDIR /usr/src/app
 
-# copy app dir consisting of app files to container's workdir - first . is all app dir.
+# copy app dir consisting of app files to container's workdir - first . is all app dir
 COPY . .
 
 # install dependencies
