--- a/app/.dockerignore
+++ b/app/.dockerignore
@@ -1,14 +1,4 @@
-# Exclude Terraform-specific files
-.terraform/
-*.tfstate
-*.tfstate.backup
-*.tfplan
-*.tfvars
-*.tfvars.json
-*.auto.tfvars
-crash.log
-
-# Exclude temporary files and logs
+# Exclude temporary files and logs.
 *.log
 *.bak
 *.tmp
@@ -16,10 +6,10 @@ crash.log
 *.swo
 .DS_Store
 
-# Exclude Git-related files
+# Exclude Git-related files.
 .git/
 .gitignore
 
-# Exclude other unnecessary files or directories
+# Exclude other unnecessary files or directories.
 node_modules/
 vendor/
