--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.8
 
-# set a directory for the app
+# set a app dir - creating it
 WORKDIR /usr/src/app
 
-# copy app dir consisting of app files to container's workdir - first . is all app dir
+# copy whole app-dir consisting of app files to image, according to build context ( app/ )
 COPY . .
 
 # install dependencies
@@ -12,5 +12,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 # tell the port number the container should expose
 EXPOSE 5000
 
-# run the command
+# run app
 CMD ["python", "./app.py"]
