--- a/argocd/helm-flask/templates/service-flask.yaml
+++ b/argocd/helm-flask/templates/service-flask.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: flask-app-service
   labels:
-    app: flask-app # for service monitor discovery.
+    app: flask-app # for service monitor discovery!!!!!!!!!!!!!
 spec:
   type: LoadBalancer
   selector:
