--- a/argocd/applications/loki.yaml
+++ b/argocd/applications/loki.yaml
@@ -3,6 +3,9 @@ kind: Application
 metadata:
   name: loki  
   namespace: argocd  # Namespace where ArgoCD is running
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+    - resources-finalizer.argoproj.io/background
 spec:
   project: default  # ArgoCD project to which this app belongs
   source:
