--- a/argocd/applications/monitor.yaml
+++ b/argocd/applications/monitor.yaml
@@ -3,6 +3,9 @@ kind: Application
 metadata:
   name: monitor-stack
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+    - resources-finalizer.argoproj.io/background
 spec:
   project: default
   source:
