--- a/.github/workflows/clean-cluster.yaml
+++ b/.github/workflows/clean-cluster.yaml
@@ -30,61 +30,73 @@ jobs:
               --project ${{ secrets.GCP_PROJECT_ID }} \
               --zone ${{ secrets.GCP_ZONE }}
 
-      - name: Cleanup Helm / ArgoCD Deployments # in future do cascade delete with argocd cli to app-of-apps.
+      - name: Determine cleanup type - Helm test
         run: |
-          set -x  # enable debugging
-          
           if helm list -A | grep -i "release\|loki\|my-monitoring"; then
-            echo "Helm releases found. Cleaning up..."
-
-            curl -fsSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
-            helm version
-
-            cleanup_helm_release() {
-              
-              release=$1
-              namespace=$2
-              
-              echo "Checking status of Helm release '$release' in namespace '$namespace'..."
-              
-              if helm status "$release" -n "$namespace"; then
-                echo "Release '$release' found. Deleting..."
-                helm uninstall "$release" -n "$namespace"
-                echo "Successfully deleted Helm release '$release' in namespace '$namespace'."
-              else
-                echo "Helm release '$release' not found in namespace '$namespace'. Skipping."
-              fi
-            }
-
-            cleanup_helm_release "release" "default"
-            cleanup_helm_release "loki" "log"
-            cleanup_helm_release "my-monitoring" "monitor"
-
-            echo "All Helm releases deleted!"
-
+            echo "Helm releases found."
+            echo "CLEANUP_TYPE=helm" >> $GITHUB_ENV
           elif kubectl get application -n argocd | grep -i "flask-app\|monitor-stack\|loki"; then
-            echo "ArgoCD applications found. Cleaning up..."
-
-            curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
-            sudo install -m 555 argocd-linux-amd64 /usr/local/bin/argocd
-
-            pass=$(kubectl -n argocd get secret argocd-initial-admin-secret \
-             -o jsonpath="{.data.password}" | base64 -d)
-            service=$(kubectl get svc -n argocd | grep "argocd-server" | awk '{print $4}')   
-
-            argocd login "$service" --username admin --password "$pass" --insecure
-
-            argocd app set app-of-apps --sync-policy none
-            argocd app delete app-of-apps --cascade --yes
-          
-            echo "all ArgoCD applications and resources deleted!"
+            echo "ArgoCD applications found."
+            echo "CLEANUP_TYPE=argocd" >> $GITHUB_ENV
           else
-            echo "No Helm releases or ArgoCD applications found to clean up."
+            echo "No Helm releases or ArgoCD applications found."
           fi
 
+      - name: Cleanup Helm Deployment
+        if: ${{ env.CLEANUP_TYPE == 'helm' }}
+        run: |
+          set -x  # enable debugging
 
-# MANUAL DELETION:
+          curl -fsSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+          helm version
+
+          cleanup_helm_release() {
+            
+            release=$1
+            namespace=$2
+            
+            echo "Checking status of Helm release '$release' in namespace '$namespace'..."
+            
+            if helm status "$release" -n "$namespace"; then
+              echo "Release '$release' found. Deleting..."
+              helm uninstall "$release" -n "$namespace"
+              echo "Successfully deleted Helm release '$release' in namespace '$namespace'."
+            else
+              echo "Helm release '$release' not found in namespace '$namespace'. Skipping."
+            fi
+          }
+
+          cleanup_helm_release "release" "default"
+          cleanup_helm_release "loki" "log"
+          cleanup_helm_release "my-monitoring" "monitor"
+
+          echo "All Helm releases deleted!"
+
+      - name: Cleanup ArgoCD Deployment
+        if: ${{ env.CLEANUP_TYPE == 'argocd' }}
+        run: |   
+          set -x
+
+          curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+          sudo install -m 555 argocd-linux-amd64 /usr/local/bin/argocd
+
+          set +x
+          pass=$(kubectl -n argocd get secret argocd-initial-admin-secret \
+            -o jsonpath="{.data.password}" | base64 -d)
+          service=$(kubectl get svc -n argocd | grep "argocd-server" | awk '{print $4}')   
+
+          argocd login "$service" --username admin --password "$pass" --insecure
+
+          set -x
+          argocd app set app-of-apps --sync-policy none
+          argocd app delete app-of-apps --cascade --yes
+        
+          echo "all ArgoCD applications and resources deleted!"
+
+
+# MANUAL ARGOCD DELETION:
 #_________________________________________________________________________________________________
+
 # kubectl delete application app-of-apps -n argocd || true
 # kubectl delete application flask-app -n argocd || true
 # kubectl delete application monitor-stack -n argocd || true
