--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.8
 # set a app dir - creating it
 WORKDIR /usr/src/app
 
-# copy whole app-dir consisting of app files to image, according to build context ( app/ )
+# copy whole app-dir consisting of app files to image, according to build context in dc ( app/ )
 COPY . .
 
 # install dependencies
@@ -14,3 +14,5 @@ EXPOSE 5000
 
 # run app
 CMD ["python", "./app.py"]
+
+# .dockerignore in same hirarchy according to build context! , per one dockerfile.
