--- a/.github/workflows/argocd.yaml
+++ b/.github/workflows/argocd.yaml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
 
-env: # +++++ another dockerhub repo
+env: # another dockerhub repo ( + "-argocd" )
   IMAGE_NAME: crazyguy888/catexer-actions-argocd
   IMAGE_TAG: 0.0.${{ github.run_number }}
 
