--- a/argocd/helm-flask/templates/service-flask.yaml
+++ b/argocd/helm-flask/templates/service-flask.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: flask-app # for service monitor discovery!!!!!!!!!!!!!
 spec:
-  type: ClusterIP
+  type: ClusterIP # LoadBalancer without ingress.
   selector:
     app: flask-app
   ports:
